fix: holy sh*t z-index

--- a/components/common/Header.scss
+++ b/components/common/Header.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   background: #1d1d1d;
-  z-index: 999999;
+  z-index: 1;
 }
 
 .HeaderImage {
